--- a/index.html
+++ b/index.html
@@ -23,17 +23,25 @@
 
   </head>
   <body>
-    <header>
+    <header id="sticky">
       <div class="container">
-        <div class="row">
-          <div class="w-75">
-            <div class="image w-25">
-              <img class="img-fluid" src="./images/logo.png" alt="">
+        <div class="row align-items-md-center justify-content-md-between py-1">
+          <div class="col-12 col-md-5 text-center text-md-start">
+            <img class="width" src="./images/logo.png" alt="">
+          </div>
+          <div class="col-12 col-md-5">
+            <div class="d-flex mx-auto w-full justify-content-center justify-content-md-end">
+              <input type="text" placeholder="Search...">
+              <button id="search-btn" class="btn btn-primary">Search</button>
             </div>
           </div>
         </div>
+        </div>
       </div>
     </header>
+    <main>
+      
+    </main>
 
 
 
