Responsiveness fix for mobile

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </header>
     <main>
       <!-- Preloader -->
-        <button id="loader" class="btn btn-danger d-none" type="button" disabled>
+        <button id="loader" class="btn d-none" type="button" disabled>
           <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
           Loading...
         </button>
       <!-- Product card start -->
-      <div class="container mt-5">
+      <div class="container mt-0 mt-md-5">
         <div id="detail-parent" class="row">
           
         </div>
