Mobile shop header image added

--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
       </div>
     </header>
     <main>
+      <!-- Logo text -->
+      <div class="text-center">
+        <img class="img-fluid" src="./images/text.png" alt="">
+      </div>
       <!-- Preloader -->
         <button id="loader" class="btn d-none" type="button" disabled>
           <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
           Loading...
         </button>
       <!-- Product card start -->
-      <div class="container mt-0 mt-md-5">
+      <div class="container mt-0 mt-md-1">
         <div id="detail-parent" class="row">
           
         </div>
       </div>
-      <div class="container mt-5">
+      <div class="container mt-2">
         <div id="card-parent" class="row">
           
         </div>
