Show more functionality added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Result found -->
       <div class="container">
         <div class="row">
-          <div id="result-parent" class="result text-end">
+          <div id="result-parent" class="result text-end mb-1 mb-md-0">
             
           </div>
         </div>
@@ -68,6 +68,9 @@
       <div class="container mt-0">
         <div id="card-parent" class="row">
           
+        </div>
+        <div id="show-more-parent" class="text-center text-md-end mb-4">
+          <a class="btn btn-danger d-none mt-2 mt-md-0" id="show-more">Show More <i class="fa-solid fa-angles-right"></i></a>
         </div>
       </div>
     </main>
