Bug fix for logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
       <!-- Logo text -->
       <div class="text-center">
-        <img class="img-fluid" src="./images/text.png" alt="">
+        <img class="img-fluid" src="./images/text.png" href="https://mobile-shop-ayon.netlify.app" alt="">
       </div>
       <!-- Result found -->
       <div class="container">
